<resources>

    <string name="facebook_app_id">929786000467092</string>

    <string name="app_name">웨딩 싱어즈</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back_pressed">종료를 원하시면 뒤로 버튼을 한 번 더 눌러주세요.</string>

    <string name="action_search">검색</string>

    <!-- 메인 탭 이름 -->
    <string name="main_tab_popular">인기 동영상</string>
    <string name="main_tab_new">신규 싱어 영상</string>
    <string name="main_tab_event">이벤트</string>

    <!-- 싱어 마이페이지 탭 이름 -->
    <string name="my_page_singer_tab_mypage">마이 페이지</string>
    <string name="my_page_singer_tab_profile">프로필 관리</string>

    <!-- NavigationDrawer 로그인 하세요 -->
    <string name="nav_do_login">로그인하세요</string>

    <!-- NavigationDrawer 메뉴 이름 -->
    <string name="nav_home">홈</string>
    <string name="nav_my_page">마이 페이지</string>
    <string name="nav_reservation_mgm">예약 관리</string>
    <string name="nav_schedule_mgm">일정 관리</string>
    <string name="nav_review">리뷰/평점</string>
    <string name="nav_chat">대화하기</string>
    <string name="nav_community">커뮤니티</string>
    <string name="nav_qna">QnA</string>

    <!--video_menu.xml-->
    <string name="video_menu_favorite">좋아요</string>
    <string name="video_menu_cancel_favorite">좋아요 해제</string>

    <!--ReservationListFragment.xml-->
    <string name="reservation_list">예약 현황</string>
    <string name="reserved_one">예약 완료</string>

    <!--schedule_menu.xml-->
    <string name="schedule_menu_plus">휴일 관리</string>

    <!--search_menu.xml-->
    <string name="search_menu_filter">filter</string>

    <!--fragmnet_write_review.xml-->
    <string name="write_review_tv_bill_num_text">내역 선택</string>
    <string name="write_review_tv_rating_text">별점</string>
    <string name="write_review_tv_content_text">내용</string>
    <string name="write_review_btn_write_description">등록하기</string>

    <!--fragment_my_page_customer.xml-->
    <!--fragment_singer_my_page.xml-->
    <string name="my_page_my_point_text">마이 포인트</string>
    <string name="my_page_my_penalty_text">마이 페널티</string>
    <string name="my_page_inquiry_text">1:1문의 답변</string>
    <string name="my_page_favor_text">찜한 영상</string>
    <string name="my_page_account_text">환불계좌 관리</string>
    <string name="my_page_point_store_text">포인트 상점</string>
    <string name="my_page_point_text">포인트 관리</string>
    <string name="my_page_statistic_text">통계/분석</string>
    <string name="my_page_btn_logout_text">로그 아웃</string>
    <string name="my_page_btn_leave_text">회원 탈퇴</string>

    <!--fragment_user_info.xml-->
    <string name="user_info_tv_name_text">이름</string>
    <string name="user_info_tv_email_text">이메일</string>
    <string name="user_info_tv_phone_text">연락처</string>
    <string name="user_info_tv_password_text">비밀번호</string>
    <string name="user_info_tv_password_confirm_text">비밀번호 확인</string>
    <string name="user_info_btn_apply_text">적용</string>
    <string name="user_info_btn_cancel_text">취소</string>

    <!--fragment_singer_profile.xml-->
    <string name="singer_profile_price_tv_special_text">스페셜</string>
    <string name="singer_profile_price_tv_standard_text">스탠다드</string>
    <string name="singer_profile_tv_basic_info_text">기본 정보</string>
    <string name="singer_profile_intro_tv_title_text">자기 소개</string>
    <string name="singer_profile_price_tv_title_text">가격 정보</string>
    <string name="singer_profile_my_video_tv_title">동영상 관리</string>

    <!--fragment_singer_profile_modify.xml-->
    <string name="singer_profile_modify_tv_comment_text">한마디</string>
    <string name="singer_profile_modify_tv_location_text">지역</string>
    <string name="singer_profile_modify_tv_compostion_text">구성</string>
    <string name="singer_profile_modify_rl_theme_text">테마</string>
    <string name="singer_profile_modify_tv_intro_text">자기 소개</string>
    <string name="singer_profile_modify_tv_price_text">가격 정보</string>
    <string name="singer_profile_modify_tv_standard_text">스탠다드</string>
    <string name="singer_profile_modify_tv_special_text">스페셜</string>
    <string name="singer_profile_modify_tv_songs_text">곡 목록</string>
    <string name="singer_profile_modify_et_songs_hint">곡은 쉼표로 구분합니다.</string>
    <string name="singer_profile_modify_btn_apply_text">확인</string>
    <string name="singer_profile_modify_btn_cancel">취소</string>

    <!--fragment_video_add.xml-->
    <string name="video_add_tv_title_bar_text">동영상 추가</string>
    <string name="video_add_tv_title_text">제목</string>
    <string name="video_add_tv_url_text">동영상 주소</string>
    <string name="video_add_tv_content_text">설명</string>
    <string name="video_add_tv_hashtag_text">해시태그</string>
    <string name="video_add_btn_apply_text">추가</string>
    <string name="video_add_btn_cancel_text">취소</string>

    <!--fragment_singer_info.xml-->
    <string name="singer_info_tv_basic_info_text">기본 정보</string>
    <string name="singer_info_intro_tv_title_text">자기 소개</string>
    <string name="singer_info_price_tv_title_text">가격 정보</string>
    <string name="singer_info_price_tv_special_text">스페셜</string>
    <string name="singer_info_price_tv_standard_text">스탠다드</string>
    <string name="singer_info_review_tv_title_text">싱어 리뷰</string>
    <string name="singer_info_other_tv_title_text">다른 동영상</string>

    <!--fragment_singer_review.xml-->
    <string name="singer_review_tv_review_text">평점</string>
    <string name="singer_review_tv_review_title_text">리뷰</string>

    <!--fragment_video.xml-->
    <string name="video_video_btn_reserve_text">요청하기</string>
    <string name="video_tv_price_info_text">가격 정보</string>
    <string name="video_tv_special_text">스페셜</string>
    <string name="video_tv_standard_text">스탠다드</string>
    <string name="video_tv_review_text">싱어 평가</string>

</resources>
