<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_mypage"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_mypage" />
        <item
            android:id="@+id/nav_reservation_mgm"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/nav_reservation_mgm" />
        <item
            android:id="@+id/nav_review"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_review" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_chat" />
        <item
            android:id="@+id/nav_community"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_community" />
        <item
            android:id="@+id/nav_qna"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_qna" />
    </group>


</menu>
