<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".function.mypage.mypage.SingerProfileModifyFragment">

    <RelativeLayout
        android:id="@+id/singer_profile_modify_rl_comment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_modify_rl_fix_height"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/singer_profile_modify_tv_comment"
            android:layout_width="@dimen/singer_profile_modify_tv_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/singer_profile_modify_tv_comment_text"
            android:textColor="@color/singer_profile_modify_tv_title_color" />

        <EditText
            android:id="@+id/singer_profile_modify_et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:inputType="textMultiLine"
            android:lines="1"
            android:scrollHorizontally="false"
            android:layout_toRightOf="@+id/singer_profile_modify_tv_comment" />

    </RelativeLayout>

    <View
        android:id="@+id/singer_profile_modify_divider_location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_divider_height"
        android:layout_below="@+id/singer_profile_modify_rl_comment"
        android:background="@color/singer_profile_divider_color" />

    <RelativeLayout
        android:id="@+id/singer_profile_modify_rl_location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_modify_rl_fix_height"
        android:layout_below="@+id/singer_profile_modify_divider_location">

        <TextView
            android:id="@+id/singer_profile_modify_tv_location"
            android:layout_width="@dimen/singer_profile_modify_tv_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/singer_profile_modify_tv_location_text"
            android:textColor="@color/singer_profile_modify_tv_title_color" />

        <Spinner
            android:id="@+id/singer_profile_modify_sp_location"
            android:layout_width="@dimen/singer_profile_modify_sp_width"
            android:layout_height="@dimen/singer_profile_modify_sp_height"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/singer_profile_modify_tv_location"
            android:spinnerMode="dropdown" />

    </RelativeLayout>

    <View
        android:id="@+id/singer_profile_modify_divider_compostion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_divider_height"
        android:layout_below="@+id/singer_profile_modify_rl_location"
        android:background="@color/singer_profile_divider_color" />

    <RelativeLayout
        android:id="@+id/singer_profile_modify_rl_composition"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_modify_rl_fix_height"
        android:layout_below="@+id/singer_profile_modify_divider_compostion">

        <TextView
            android:id="@+id/singer_profile_modify_tv_composition"
            android:layout_width="@dimen/singer_profile_modify_tv_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/singer_profile_modify_tv_compostion_text"
            android:textColor="@color/singer_profile_modify_tv_title_color" />

        <Spinner
            android:id="@+id/singer_profile_modify_sp_composition"
            android:layout_width="@dimen/singer_profile_modify_sp_width"
            android:layout_height="@dimen/singer_profile_modify_sp_height"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/singer_profile_modify_tv_composition"
            android:spinnerMode="dropdown" />

    </RelativeLayout>

    <View
        android:id="@+id/singer_profile_modify_divider_theme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_divider_height"
        android:layout_below="@+id/singer_profile_modify_rl_composition"
        android:background="@color/singer_profile_divider_color" />

    <RelativeLayout
        android:id="@+id/singer_profile_modify_rl_theme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_modify_rl_fix_height"
        android:layout_below="@+id/singer_profile_modify_divider_theme">

        <TextView
            android:id="@+id/singer_profile_modify_tv_theme"
            android:layout_width="@dimen/singer_profile_modify_tv_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/singer_profile_modify_rl_theme_text"
            android:textColor="@color/singer_profile_modify_tv_title_color" />

        <Spinner
            android:id="@+id/singer_profile_modify_sp_theme"
            android:layout_width="@dimen/singer_profile_modify_sp_width"
            android:layout_height="@dimen/singer_profile_modify_sp_height"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/singer_profile_modify_tv_theme"
            android:spinnerMode="dropdown" />

    </RelativeLayout>

    <View
        android:id="@+id/singer_profile_modify_divider_intro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_divider_height"
        android:layout_below="@+id/singer_profile_modify_rl_theme"
        android:background="@color/singer_profile_divider_color" />

    <RelativeLayout
        android:id="@+id/singer_profile_modify_rl_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/singer_profile_modify_divider_intro">

        <TextView
            android:id="@+id/singer_profile_modify_tv_intro"
            android:layout_width="@dimen/singer_profile_modify_tv_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/singer_profile_modify_tv_intro_text"
            android:textColor="@color/singer_profile_modify_tv_title_color" />

        <EditText
            android:id="@+id/singer_profile_modify_et_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollHorizontally="false"
            android:layout_toRightOf="@+id/singer_profile_modify_tv_intro" />

    </RelativeLayout>

    <View
        android:id="@+id/singer_profile_modify_divider_price"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_divider_height"
        android:layout_below="@+id/singer_profile_modify_rl_intro"
        android:background="@color/singer_profile_divider_color" />

    <RelativeLayout
        android:id="@+id/singer_profile_modify_rl_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/singer_profile_modify_divider_price">

        <TextView
            android:id="@+id/singer_profile_modify_tv_price"
            android:layout_width="@dimen/singer_profile_modify_tv_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/singer_profile_modify_tv_price_text"
            android:textColor="@color/singer_profile_modify_tv_title_color" />

        <RelativeLayout
            android:id="@+id/singer_profile_modify_rl_special"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/singer_profile_modify_tv_price">

            <TextView
                android:id="@+id/singer_profile_modify_tv_special"
                android:layout_width="@dimen/singer_profile_modify_tv_price_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/singer_profile_modify_tv_special_text" />

            <EditText
                android:id="@+id/singer_profile_modify_et_special"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/singer_profile_modify_tv_special"
                android:inputType="numberDecimal"
                android:maxLines="1" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/singer_profile_modify_rl_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/singer_profile_modify_rl_special"
            android:layout_toRightOf="@+id/singer_profile_modify_tv_price">

            <TextView
                android:id="@+id/singer_profile_modify_tv_standard"
                android:layout_width="@dimen/singer_profile_modify_tv_price_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/singer_profile_modify_tv_standard_text" />

            <EditText
                android:id="@+id/singer_profile_modify_et_standard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/singer_profile_modify_tv_standard"
                android:inputType="numberDecimal"
                android:maxLines="1" />

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/singer_profile_modify_divider_songs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_divider_height"
        android:layout_below="@+id/singer_profile_modify_rl_price"
        android:background="@color/singer_profile_divider_color" />

    <RelativeLayout
        android:id="@+id/singer_profile_modify_rl_songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/singer_profile_modify_divider_songs">

        <TextView
            android:id="@+id/singer_profile_modify_tv_songs"
            android:layout_width="@dimen/singer_profile_modify_tv_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/singer_profile_modify_tv_songs_text"
            android:textColor="@color/singer_profile_modify_tv_title_color" />

        <EditText
            android:id="@+id/singer_profile_modify_et_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/singer_profile_modify_tv_songs"
            android:hint="@string/singer_profile_modify_et_songs_hint" />

    </RelativeLayout>

    <View
        android:id="@+id/singer_profile_modify_divider_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_divider_height"
        android:layout_below="@+id/singer_profile_modify_rl_songs"
        android:background="@color/singer_profile_divider_color" />

    <RelativeLayout
        android:id="@+id/singer_profile_modify_rl_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singer_profile_modify_rl_btn_height"
        android:layout_below="@+id/singer_profile_modify_divider_btn"
        android:gravity="center">

        <Button
            android:id="@+id/singer_profile_modify_btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_radius"
            android:text="@string/singer_profile_modify_btn_apply_text"
            android:textColor="@color/singer_profile_modify_btn_color" />

        <Button
            android:id="@+id/singer_profile_modify_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/singer_profile_modify_btn_cancel_margin_left"
            android:layout_toRightOf="@+id/singer_profile_modify_btn_apply"
            android:background="@drawable/custom_btn_radius"
            android:text="@string/singer_profile_modify_btn_cancel"
            android:textColor="@color/singer_profile_modify_btn_color" />

    </RelativeLayout>

</RelativeLayout>

